# Omoide_Porter

./: .editorconfig  .gitignore  README.md  debug_devices.py  debug_gui.py  debug_main_gui.py  launch_device_gui.py  pyproject.toml  requirements.txt  run.py  run_device_gui.py  run_main_app.py  setup.py
.cursor/rules/: code_formatting_rules.md  development_guidelines.mdc
config/: sample_config.json
docs/: build_and_deployment.md  data_structure.md  device_connection_guide.md  enhanced_filter_config_example.json  features.md  filter_extension_guide.md  misc.md  overview.md  system_architecture.md  ui_ux_design.md
src/: __init__.py  __main__.py
src/cli/: __init__.py  cli_app.py  device_commands.py  main.py  main_cli.py
src/core/: __init__.py  config.py  config_manager.py  device_manager.py  file_filter.py  file_info.py  file_operations.py  filter_base.py  metadata_extractor.py  models.py  path_generator.py
src/core/filters/: __init__.py  date_range_filter.py  media_type_filter.py  screenshot_filter.py
src/gui/: __init__.py  device_gui.py  main_window.py  preset_dialog.py
tests/: test_filter_integration.py
